--- a/package.xml
+++ b/package.xml
@@ -10,9 +10,9 @@
 
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>rospy</build_depend>
-  <build_export_depend>rospy</build_export_depend>
-  <exec_depend>rospy</exec_depend>
+  <depend>rospy</depend>
+  <depend>python-gdal</depend>
+
   <export>
   </export>
 </package>
